--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>mybatis_plus_demo</module>
         <module>multi_source_redis</module>
         <module>java_basic</module>
+        <module>hbase_demo</module>
     </modules>
 
     <dependencyManagement>
