--- a/es7_demo/pom.xml
+++ b/es7_demo/pom.xml
@@ -3,13 +3,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.example</groupId>
+        <artifactId>gaosong_practice_collection</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <packaging>jar</packaging>
     <groupId>com.example</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>es7_demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>es7_demo</name>
     <description>Demo project for Spring Boot</description>
@@ -31,6 +32,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <version>2.3.4.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -46,6 +48,11 @@
             <version>7.4.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -53,6 +60,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
