--- a/mybatis_plus_demo/pom.xml
+++ b/mybatis_plus_demo/pom.xml
@@ -7,6 +7,8 @@
         <artifactId>gaosong_practice_collection</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <packaging>jar</packaging>
     <groupId>com.example</groupId>
     <artifactId>mybatis_plus_demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
@@ -81,6 +83,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
