--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.example</groupId>
     <artifactId>gaosong_practice_collection</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <spring.boot.verison>2.5.0</spring.boot.verison>
@@ -16,7 +17,7 @@
         <module>mybatis_plus_demo</module>
         <module>multi_source_redis</module>
         <module>java_basic</module>
-        <module>hbase_demo</module>
+        <module>es7_demo</module>
     </modules>
 
     <dependencyManagement>
@@ -40,8 +41,31 @@
                 <version>${spring.boot.verison}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.68</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
